[workspace]
resolver = "2"
members = [
    "minter",
    "integration_tests",
    "libs/types",
]

[workspace.package]
authors = ["DFINITY Stiftung"]
edition = "2024"
repository = "https://github.com/dfinity/cksol"
homepage = "https://github.com/dfinity/cksol#readme"
license = "Apache-2.0"
readme = "README.md"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

# Required by `ic-test-utilities-load-wasm`
[profile.canister-release]
inherits = "release"

[workspace.dependencies]
candid = "0.10.20"
candid_parser = "0.3.0"
ic-cdk = "0.19.0"
ic-canister-runtime = "0.1.2"
ic-management-canister-types = "0.5.0"
ic-pocket-canister-runtime = "0.3.0"
ic-test-utilities-load-wasm = { git = "https://github.com/dfinity/ic", tag = "release-2026-01-29_23-28-base" }
pocket-ic = "12.0.0"
serde = "1.0.228"
tokio = "1.49.0"
