[workspace]
resolver = "2"
members = ["integration_tests", "libs/types", "libs/types-internal", "minter"]

[workspace.package]
authors = ["DFINITY Stiftung"]
edition = "2024"
repository = "https://github.com/dfinity/cksol"
homepage = "https://github.com/dfinity/cksol#readme"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.89"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
candid = "0.10.20"
candid_parser = "0.3.0"
canlog = "0.2.0"
derive_more = { version = "2.1.1", features = ["from"] }
hex = "0.4.3"
ic-canister-runtime = "0.2.0"
ic-cdk = "0.19.0"
ic-dummy-getrandom-for-wasm = "0.1.0"
ic-ed25519 = "0.6.0"
ic-http-types = "0.1.0"
ic-management-canister-types = "0.5.0"
ic-pocket-canister-runtime = "0.4.0"
ic-stable-structures = "0.7.2"
ic-test-utilities-load-wasm = { git = "https://github.com/dfinity/ic", tag = "release-2026-01-29_23-28-base" }
icrc-cbor = "0.1.0"
icrc-ledger-client-cdk = "0.1.4"
icrc-ledger-types = "0.1.12"
minicbor = "0.19.1"
num-traits = "0.2.19"
pocket-ic = "12.0.0"
proptest = "1.10.0"
reqwest = "0.13.2"
serde = "1.0.228"
serde_json = "1.0.149"
sol_rpc_client = "5.0.0"
sol_rpc_types = "3.1.1"
solana-address = "2.0.0"
solana-client = "3.1.8"
solana-keypair = "3.1.1"
solana-native-token = "3.0.0"
solana-signature = "3.1.0"
solana-system-transaction = "3.0.0"
solana-transaction = "3.1.0"
solana-transaction-status-client-types = "3.1.8"
thiserror = "2.0.18"
tokio = "1.49.0"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

# Required by `ic-test-utilities-load-wasm`
[profile.canister-release]
inherits = "release"
