[package]
name = "cksol-int-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true }
canlog = { workspace = true }
cksol-types = { path = "../libs/types" }
cksol-types-internal = { path = "../libs/types-internal", features = ["log", "event"] }
ic-canister-runtime = { workspace = true }
ic-http-types = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-pocket-canister-runtime = { workspace = true }
ic-test-utilities-load-wasm = { workspace = true }
pocket-ic = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert2 = { workspace = true }
assert_matches = { workspace = true }
icrc-ledger-types = { workspace = true }
tokio = { workspace = true }
