[package]
name = "cksol-minter"
version = "0.1.0"
description = "Chain-key SOL minter for the Internet Computer."
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "cksol-minter"
path = "src/main.rs"

[dependencies]
bs58 = { workspace = true }
candid = { workspace = true }
canlog = { workspace = true, features = ["derive"] }
cksol-types = { path = "../libs/types" }
cksol-types-internal = { path = "../libs/types-internal", features = ["log"] }
ic-cdk = { workspace = true }
ic-dummy-getrandom-for-wasm = { workspace = true }
ic-http-types = { workspace = true }
ic-ed25519 = { workspace = true }
icrc-ledger-types = { workspace = true }
serde = { workspace = true }
solana-address = { workspace = true }

[dev-dependencies]
candid_parser = { workspace = true }
