[package]
name = "cksol-minter"
version = "0.1.0"
description = "Chain-key SOL minter for the Internet Computer."
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "cksol-minter"
path = "src/main.rs"

[dependencies]
assert_matches = { workspace = true }
candid = { workspace = true }
canlog = { workspace = true, features = ["derive"] }
cksol-types = { path = "../libs/types" }
cksol-types-internal = { path = "../libs/types-internal", features = ["event", "log"] }
derive_more = { workspace = true }
hex = { workspace = true }
ic-canister-runtime = { workspace = true }
ic-cdk = { workspace = true }
ic-dummy-getrandom-for-wasm = { workspace = true }
ic-ed25519 = { workspace = true }
ic-http-types = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-cbor = { workspace = true }
icrc-ledger-types = { workspace = true }
minicbor = { workspace = true, features = ["derive"] }
num-traits = { workspace = true }
phantom_newtype = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
sol_rpc_client = { workspace = true }
sol_rpc_types = { workspace = true }
bincode = { workspace = true }
solana-address = { workspace = true }
solana-message = { workspace = true }
solana-signature = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
candid_parser = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
