[package]
name = "cksol-types-internal"
version = "0.1.0"
description = "Internal types used by the ckSOL minter canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true }
icrc-cbor = {workspace = true, optional = true}
minicbor = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true }
sol_rpc_types = { workspace = true }

[features]
minicbor = ["dep:icrc-cbor", "dep:minicbor"]
