[package]
name = "cksol-types-internal"
version = "0.1.0"
description = "Internal types used by the ckSOL minter canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
log = ["dep:canlog"]
event = ["dep:icrc-cbor", "dep:icrc-ledger-types", "dep:minicbor"]

[dependencies]
candid = { workspace = true }
canlog = { workspace = true, features = ["derive"], optional = true }
icrc-cbor = { workspace = true, optional = true }
icrc-ledger-types = { workspace = true, optional = true }
minicbor = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true }
sol_rpc_types = { workspace = true }
