[package]
name = "cksol-types"
version = "0.1.0"
description = "Candid types used by the ckSOL minter canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[dependencies]
candid = { workspace = true }
canlog = { workspace = true }
icrc-ledger-types = { workspace = true }
minicbor = { workspace = true }
serde = { workspace = true }
sol_rpc_types = { workspace = true }
thiserror = { workspace = true }
